Fix checkbox spacing issues

--- a/css/translate.css
+++ b/css/translate.css
@@ -2001,46 +2001,16 @@ p#sign-in-required > a#sidebar-signin {
 }
 
 .issue-selection {
-  margin: 10px 10px;
+  /*margin: 0 10px;*/
   padding: 10px;
   text-align: left;
 }
 
 .issue-selection > input[type="checkbox"] {
-  opacity: 0;
-  /*position: absolute;*/
-  display: inline-block;
-  vertical-align: middle;
-  margin: 5px;
-  cursor: pointer;
-}
-
-.issue-selection > input[type="checkbox"] + label:before {
-  content: '';
-  background: transparent;
-  border: none;
-  border-radius: 5px;
-  display: inline-block;
-  vertical-align: middle;
-  width: 20px;
-  height: 20px;
-  padding: 2px;
   margin-right: 10px;
-  text-align: center;
-  box-sizing: border-box;
-}
-
-.issue-selection > input[type="checkbox"]:hover + label:before {
-  border: 2px solid rgb(253, 95, 96);
-}
-
-.issue-selection > input[type="checkbox"]:checked + label:before {
-  background: rgb(253, 95, 96);
-  transition: all 0.1s ease-in-out;
-}
-
-.issue-selection > input[type="checkbox"]:disabled {
-  visibility: hidden;
+  display: inline-block;
+  vertical-align: middle;
+  cursor: pointer;
 }
 
 .issue-selection > label {
